@@ -13,13 +13,13 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13</version>
+            <version>22</version>
         </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13</version>
+            <version>22</version>
         </dependency>
 
         <!-- H2 Database -->
@@ -48,10 +48,8 @@
             <artifactId>snakeyaml</artifactId>
             <version>2.3</version>
         </dependency>
-
-
     </dependencies>
-        <build>
+    <build>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -73,17 +71,23 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>com.lock.App</mainClass>
+                            <module>com.lock</module>
+                            <options>
+                                <option>--module-path</option>
+                                <option>${java.home}/lib</option>
+                                <option>--add-modules</option>
+                                <option>javafx.controls,javafx.fxml</option>
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
 </project>
